--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "env-cmd": "^10.1.0",
+    "firebase": "^7.18.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,9 +21,9 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "env-cmd -f .env.development.local react-scripts start",
+    "build": "env-cmd -f .env.production.local react-scripts build",
+    "test": "env-cmd -f .env.development.local react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
