--- a/landingpage/.eslintrc
+++ b/landingpage/.eslintrc
@@ -110,6 +110,8 @@
             "off"
         ],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "error"
+        "react-hooks/exhaustive-deps": "error",
+        "react/no-array-index-key": "warn"
+
     }
 }
